traefik-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  type: ClusterIP
  selector:
    app: traefik
  ports:
   - name: dashboard
     port: 8080
     targetPort: 8080
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: traefik-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
    - host: minikube.aves.internal
      http:
        paths:
          - path: /
            backend:
              serviceName: traefik-dashboard
              servicePort: dashboard
